--- a/index.html
+++ b/index.html
@@ -16,38 +16,43 @@
 
   <!-- DaisyUI cdn -->
   <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
-  
+
   <script src="https://cdn.tailwindcss.com"></script>
 
   <style>
     .font-Manrope {
       font-family: "Manrope", sans-serif;
     }
+
+    .bg-image{
+      background-image: url(./assets/bg.jpg);
+    }
   </style>
 
-<script>
-  tailwind.config = {
-    theme: {
-      extend: {
-        colors: {
-          'orange': '#ff7849',
-          'arrow-primary': '#ABEF5F',
-          'paragraph': '#ABEF5F80',
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            'orange': '#ff7849',
+            'arrow-primary': '#ABEF5F',
+            'paragraph': '#494949',
+          }
         }
       }
     }
-  }
-</script>
+  </script>
 </head>
 
 <body class="font-Manrope">
   <!-- Header section -->
-  <header class="md:container mx-auto">
+  <header class="md:container mx-auto ">
     <!-- nav bar -->
     <nav>
       <div class="navbar bg-base-100">
         <div class="navbar-start">
-          <a class="font-bold text-xl"> <i class="fa-solid fa-arrow-right"></i> Rinterio</a>
+          <a class="font-bold text-3xl"> <i
+              class="fa-solid fa-arrow-right -rotate-45 bg-arrow-primary rounded-full px-1 py-1"></i> Rinterio</a>
         </div>
         <div class="navbar-center hidden lg:flex">
           <ul class="menu menu-horizontal px-1">
@@ -58,10 +63,11 @@
             <li><a>Contact Us</a></li>
           </ul>
         </div>
-        <div class="navbar-end gap-5">
-          <div><i class="fa-solid fa-cart-shopping"></i></div>
-          <div><i class="fa-solid fa-magnifying-glass"></i></div>
-          <button><a class="btn">Book Consult <i class="fa-solid fa-arrow-right"></i> </a></button>
+        <div class="navbar-end gap-5 ">
+          <div><i class="fa-solid fa-cart-shopping text-#737373 bg-[#FFFFFF] rounded-full px-1 py-1"></i></div>
+          <div><i class="fa-solid fa-magnifying-glass text-#737373 bg-[#FFFFFF] rounded-full px-1 py-1"></i></div>
+          <button><a class="btn text-xl font-bold bg-arrow-primary rounded-3xl">Book Consult <i
+                class="fa-solid fa-arrow-right text-white -rotate-45 bg-black rounded-full px-1 py-1"></i> </a></button>
         </div>
       </div>
     </nav>
@@ -72,12 +78,14 @@
         <div class="hero-content flex-col ">
           <img src="./assets/banner.png" class=" rounded-lg" />
           <div class="text-center">
-            <h1 class="text-2xl font-bold lg:text-6xl lgfont-bold">A barn house of this design has a <br> striking appearance</h1>
-            <p class="py-6">
+            <h1 class="text-2xl font-bold lg:text-6xl lgfont-bold ">A barn house of this design has a <br> striking
+              appearance</h1>
+            <p class="py-6 text-paragraph text:sm lg:text-base">
               The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered
               wood, sleek metal <br> accents, and large windows that flood the space with natural light.
             </p>
-            <button class="bg-[#ABEF5F80] text-black font-bold py-3 px-4 rounded-3xl ">View Details <i class="fa-solid fa-arrow-right -rotate-45"></i></button>
+            <button class="bg-[#ABEF5F80] text-black font-bold py-3 px-4 rounded-3xl ">View Details
+              <i class="fa-solid fa-arrow-right -rotate-45 bg-arrow-primary rounded-full px-1 py-1"></i></button>
           </div>
         </div>
       </div>
@@ -85,7 +93,240 @@
   </header>
 
   <!-- Main section -->
-  <main class="md:container mx-auto"></main>
+  <main class="">
+
+    <!-- We design thoughtful section -->
+    <section class="relative py-10">
+      <div>
+        <img class="absolute lg:mt-16 lg:ml-20" src="./assets/Vector.png" alt="">
+      </div>
+      <div class="hero bg-base-200 px-20 py-20 min-h-screen">
+        <div class="hero-content flex-col lg:flex-row">
+          <div class="gap-5">
+            <div class="text-center lg:text-left">
+              <button class="bg-[#FFFFFF] font-bold text-base mb-3 py-3 px-4 rounded-3xl"><i
+                  class="fa-solid fa-arrow-right"></i> About Us</button>
+              <h1 class="text-black text-2xl lg:text-5xl font-bold">We design thoughtful,<br> liveable spaces</h1>
+              <p class="py-6 text-paragraph text:sm lg:text-base ">
+                The barn house captivates with its blend of rustic charm and <br>
+                modern sophistication, featuring weathered wood, sleek metal accents.
+              </p>
+            </div>
+            <!-- card-1 -->
+            <div class="flex bg-[#FFFFFF] rounded-2xl px-5 py-5 gap-5">
+              <div>
+                <img src="./assets/commercial.png" alt="">
+              </div>
+              <div class="">
+                <h2 class="text-xl font-bold">Commercial</h2>
+                <p class="text-paragraph text:sm lg:text-base">The barn house captivates with its blend <br> of rustic
+                  charm and modern.</p>
+              </div>
+            </div>
+
+            <!-- card-2 -->
+            <div class="flex bg-[#FFFFFF] rounded-2xl px-5 py-5 mt-5 gap-5">
+              <div>
+                <img src="./assets/residential.png" alt="">
+              </div>
+              <div>
+                <h2 class="text-xl font-bold">Residential</h2>
+                <p class="text-paragraph text:sm lg:text-base">The barn house captivates with its blend <br> of rustic
+                  charm and modern.</p>
+              </div>
+            </div>
+          </div>
+          <!-- image -->
+          <div>
+            <img src="./assets/Rectangle.png" class=" rounded-lg shadow-2xl" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Our Works Process section -->
+    <section class=" bg-base-200">
+      <div class="md:container mx-auto max-w-screen-xl px-5 lg:px-12 py-28">
+        <!-- content -->
+        <div class="text-center pb-8 space-y-5">
+          <button class="text-lg text-black bg-[#FFFFFF] rounded-3xl font-bold  py-1 px-3"> <i
+              class="fa-solid fa-arrow-right "></i>How we works</button>
+          <h1 class="text-black text-2xl font-bold lg:text-4xl ">Our Works Process</h1>
+          <p class="text-paragraph text:sm lg:text-base">The barn house captivates with its blend of rustic charm and
+            modern sophistication,<br> featuring weathered wood, sleek metal accents.</p>
+        </div>
+        <div class="grid grid-cols-1 lg:grid-cols-4 gap-5 ">
+          <!-- card-1 -->
+          <div class="card bg-[#E7C1D3] w-72 shadow-xl ">
+            <div class="pt-5">
+              <div class="ml-8">
+                <img src="./assets/concept.png" alt="">
+              </div>
+              <div class="card-body">
+                <h2 class=" text-xl font-bold">Concept</h2>
+                <p class="text-paragraph text:sm lg:text-base">The barn house captivates with its blend of rustic charm
+                  and modern.</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- card-2 -->
+          <div class="card bg-[#EFDA6E] w-72 shadow-xl ">
+            <div class="pt-5">
+              <div class="ml-8">
+                <img src="./assets/flow-chart.png" alt="">
+              </div>
+              <div class="card-body">
+                <h2 class=" text-xl font-bold">Design Process</h2>
+                <p class="text-paragraph text:sm lg:text-base">The barn house captivates with its blend of rustic charm
+                  and modern.</p>
+              </div>
+            </div>
+          </div>
+          <!-- card-3 -->
+          <div class="card bg-[#A4DAC3] w-72 shadow-xl ">
+            <div class="pt-5">
+              <div class="ml-8">
+                <img src="./assets/vision.png" alt="">
+              </div>
+              <div class="card-body">
+                <h2 class=" text-xl font-bold">Supervision</h2>
+                <p class="text-paragraph text:sm lg:text-base">The barn house captivates with its blend of rustic charm
+                  and modern.</p>
+              </div>
+            </div>
+          </div>
+          <!-- card-4 -->
+          <div class="card bg-[#77AAEA] w-72 shadow-xl ">
+            <div class="pt-5">
+              <div class="ml-8">
+                <img src="./assets/budget-planning.png" alt="">
+              </div>
+              <div class="card-body">
+                <h2 class=" text-xl font-bold">Budget Planning</h2>
+                <p class="text-paragraph text:sm lg:text-base">The barn house captivates with its blend of rustic charm
+                  and modern.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+    <!-- Our Latest Portfolio section -->
+    <section>
+
+      <div class="pt-24">
+        <!-- title -->
+        <div class="text-center space-y-5">
+          <button class="text-base text-[#494949] font-bold"><i class="fa-solid fa-arrow-right "></i>Explore our Latest
+            works</button>
+          <h1 class="text-[#212121] text-4xl font-bold">Our Latest Portfolio</h1>
+          <p class="text-paragraph text-base">The barn house captivates with its blend of rustic charm and modern
+            sophistication,<br> featuring weathered wood,
+            sleek metal accents.</p>
+        </div>
+
+        <!-- content  -->
+        <div class="md:container mx-auto gap-5 p-7">
+          <!-- Flex-div-1 -->
+          <div class="grid grid-cols-1 lg:grid-cols-4">
+            <!-- Box-1 -->
+          <div class="border rounded-2xl p-6">
+            <img src="./assets/img1.png" alt="">
+          </div>
+
+          <!-- Box-2 -->
+          <div class="border rounded-2xl p-6">
+            <h2 class="text-2xl font-bold text-[#494949]">Commercial</h2>
+            <p class="text-[#737373] text-base">The barn house captivates with its blend of rustic charm <br> and modern. The
+              barn house captivates with its blend of <br> rustic charm and modern . </p>
+            <button class="text-[#212121] text-xl font-bold">View Details
+              <i class="fa-solid fa-arrow-right -rotate-45 bg-arrow-primary rounded-full px-1 py-1"></i>
+            </button>
+          </div>
+          <!-- Box-3 -->
+          <div class="border rounded-2xl p-6">
+            <img src="./assets/img2.png" alt="">
+          </div>
+          </div>
+          <!-- Flex div-2 -->
+           <div class="grid grid-cols-1 lg:grid-cols-3">
+           <!-- Box-4 -->
+          <div class="border rounded-2xl p-6">
+            <img src="./assets/img3.png" alt="">
+          </div>
+          <!-- double-box -->
+         <div class="flex flex-1 border rounded-2xl p-6 row-span-2">
+           <!-- Box-5 -->
+           <div>
+            <img src="./assets/img4.png" alt="">
+          </div>
+          <!-- Box-6 -->
+          <div class="pl-4">
+            <h2 class="text-2xl font-bold text-[#494949]">Commercial</h2>
+            <p class="text-[#737373] text-base">The barn house captivates with its blend of rustic charm and 
+              modern. .</p>
+            <button class="text-[#212121] text-xl font-bold">View Details
+              <i class="fa-solid fa-arrow-right -rotate-45 bg-arrow-primary rounded-full px-1 py-1"></i>
+            </button>
+          </div>
+         </div>
+          <!-- Box-7 -->
+          <div class="border rounded-2xl p-6">
+            <img src="./assets/img5.png" alt="">
+          </div>
+        </div>
+      </div>
+          
+      </div>
+    </section>
+
+    <!-- Let’s Discuss Next Project -->
+    <section class="bg-image bg-cover bg-no-repeat">
+      <div class="lg:mx-60 lg:py-24">
+        <!-- title -->
+        <div class="text-center pb-8 space-y-5">
+          <button class="text-lg text-[#494949] bg-[#ABEF5F33] rounded-3xl font-bold  py-1 px-3"> <i
+              class="fa-solid fa-arrow-right "></i>How we works</button>
+          <h1 class="text-[#212121] text-2xl font-bold lg:text-4xl ">Let’s Discuss Next Project</h1>
+          <p class="text-paragraph text:sm lg:text-base">The barn house captivates with its blend of rustic charm and
+            modern sophistication,<br> featuring weathered wood, sleek metal accents.</p>
+        </div>
+
+        <!-- Form -->
+
+      <div class="grid grid-cols-1 lg:grid-cols-2 gap-5">
+        <div class="input py-2.5 items-center  rounded-full bg-[#FFFFFF] text-[#A0A0A0] text-base">
+          <input type="text"  placeholder="First Name*" />
+        </div>
+
+        <div class="input py-2.5 items-center rounded-full bg-[#FFFFFF] text-[#A0A0A0] text-base">
+          <input type="text"  placeholder="Last Name*" />
+        </div>
+
+        <div class="input py-2.5 items-center rounded-full bg-[#FFFFFF] text-[#A0A0A0] text-base">
+          <input type="text"  placeholder="Phone Number*" />
+        </div>
+
+        <div class="input py-2.5 items-center rounded-full bg-[#FFFFFF] text-[#A0A0A0] text-base">
+          <input type="email  "  placeholder="Email Number*" />
+        </div>
+
+        <div class="input py-2.5 items-center h-60 lg:col-span-2 rounded-2xl bg-[#FFFFFF] text-[#A0A0A0] text-base">
+          <input type="text  "  placeholder="Write your message here" />
+        </div>
+      </div>
+
+      <!-- Button -->
+      <button class="bg-[#ABEF5F] font-bold text-xl w-full rounded-full mt-8 py-3">Send Mail 
+        <i class="fa-solid fa-arrow-right text-white -rotate-45 bg-black rounded-full px-1 py-1"></i>
+      </button>
+      </div>
+    </section>
+
+  </main>
 
   <!-- Footer Section -->
   <footer></footer>
