--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       font-family: "Manrope", sans-serif;
     }
 
-    .bg-image{
+    .bg-image {
       background-image: url(./assets/bg.jpg);
     }
   </style>
@@ -69,6 +69,9 @@
           <button><a class="btn text-xl font-bold bg-arrow-primary rounded-3xl">Book Consult <i
                 class="fa-solid fa-arrow-right text-white -rotate-45 bg-black rounded-full px-1 py-1"></i> </a></button>
         </div>
+        <div tabindex="0" role="button" class="md:hidden">
+          <i class="fa-solid fa-bars"></i>
+        </div>
       </div>
     </nav>
 
@@ -77,14 +80,14 @@
       <div class="hero  ">
         <div class="hero-content flex-col ">
           <img src="./assets/banner.png" class=" rounded-lg" />
-          <div class="text-center">
-            <h1 class="text-2xl font-bold lg:text-6xl lgfont-bold ">A barn house of this design has a <br> striking
+          <div class="text-center px-5">
+            <h1 class="text-3xl font-bold lg:text-6xl lgfont-bold ">A barn house of this design has a <br> striking
               appearance</h1>
             <p class="py-6 text-paragraph text:sm lg:text-base">
               The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered
               wood, sleek metal <br> accents, and large windows that flood the space with natural light.
             </p>
-            <button class="bg-[#ABEF5F80] text-black font-bold py-3 px-4 rounded-3xl ">View Details
+            <button class="bg-[#ABEF5F80] text-black font-bold w-5/6 lg:w-1/4 py-3 px-4 rounded-3xl ">View Details
               <i class="fa-solid fa-arrow-right -rotate-45 bg-arrow-primary rounded-full px-1 py-1"></i></button>
           </div>
         </div>
@@ -98,15 +101,15 @@
     <!-- We design thoughtful section -->
     <section class="relative py-10">
       <div>
-        <img class="absolute lg:mt-16 lg:ml-20" src="./assets/Vector.png" alt="">
+        <img class="absolute hidden lg:block lg:mt-16 lg:ml-20" src="./assets/Vector.png" alt="">
       </div>
-      <div class="hero bg-base-200 px-20 py-20 min-h-screen">
+      <div class="hero bg-base-200 lg:px-20 py-20 min-h-screen">
         <div class="hero-content flex-col lg:flex-row">
           <div class="gap-5">
             <div class="text-center lg:text-left">
-              <button class="bg-[#FFFFFF] font-bold text-base mb-3 py-3 px-4 rounded-3xl"><i
+              <button class="bg-[#FFFFFF] font-bold text-base mb-3 py-2 px-4 rounded-3xl"><i
                   class="fa-solid fa-arrow-right"></i> About Us</button>
-              <h1 class="text-black text-2xl lg:text-5xl font-bold">We design thoughtful,<br> liveable spaces</h1>
+              <h1 class="text-black text-2xl lg:text-5xl font-bold ">We design thoughtful,<br> liveable spaces</h1>
               <p class="py-6 text-paragraph text:sm lg:text-base ">
                 The barn house captivates with its blend of rustic charm and <br>
                 modern sophistication, featuring weathered wood, sleek metal accents.
@@ -229,107 +232,133 @@
         </div>
 
         <!-- content  -->
-        <div class="md:container mx-auto gap-5 p-7">
+        <div class="md:container mx-auto gap-5 p-7 space-y-2">
           <!-- Flex-div-1 -->
           <div class="grid grid-cols-1 lg:grid-cols-4">
             <!-- Box-1 -->
-          <div class="border rounded-2xl p-6">
-            <img src="./assets/img1.png" alt="">
-          </div>
+            <div class="border rounded-2xl p-2">
+              <img src="./assets/img1.png" alt="">
+            </div>
 
-          <!-- Box-2 -->
-          <div class="border rounded-2xl p-6">
-            <h2 class="text-2xl font-bold text-[#494949]">Commercial</h2>
-            <p class="text-[#737373] text-base">The barn house captivates with its blend of rustic charm <br> and modern. The
-              barn house captivates with its blend of <br> rustic charm and modern . </p>
-            <button class="text-[#212121] text-xl font-bold">View Details
-              <i class="fa-solid fa-arrow-right -rotate-45 bg-arrow-primary rounded-full px-1 py-1"></i>
-            </button>
-          </div>
-          <!-- Box-3 -->
-          <div class="border rounded-2xl p-6">
-            <img src="./assets/img2.png" alt="">
-          </div>
+            <!-- Box-2 -->
+            <div class="border rounded-2xl p-2">
+              <h2 class="text-2xl font-bold text-[#494949]">Commercial</h2>
+              <p class="text-[#737373] text-base">The barn house captivates with its blend of rustic charm <br> and
+                modern. The
+                barn house captivates with its blend of <br> rustic charm and modern . </p>
+              <button class="text-[#212121] text-xl font-bold">View Details
+                <i class="fa-solid fa-arrow-right -rotate-45 bg-arrow-primary rounded-full px-1 py-1"></i>
+              </button>
+            </div>
+            <!-- Box-3 -->
+            <div class="border rounded-2xl p-2">
+              <img src="./assets/img2.png" alt="">
+            </div>
           </div>
           <!-- Flex div-2 -->
-           <div class="grid grid-cols-1 lg:grid-cols-3">
-           <!-- Box-4 -->
-          <div class="border rounded-2xl p-6">
-            <img src="./assets/img3.png" alt="">
-          </div>
-          <!-- double-box -->
-         <div class="flex flex-1 border rounded-2xl p-6 row-span-2">
-           <!-- Box-5 -->
-           <div>
-            <img src="./assets/img4.png" alt="">
-          </div>
-          <!-- Box-6 -->
-          <div class="pl-4">
-            <h2 class="text-2xl font-bold text-[#494949]">Commercial</h2>
-            <p class="text-[#737373] text-base">The barn house captivates with its blend of rustic charm and 
-              modern. .</p>
-            <button class="text-[#212121] text-xl font-bold">View Details
-              <i class="fa-solid fa-arrow-right -rotate-45 bg-arrow-primary rounded-full px-1 py-1"></i>
-            </button>
-          </div>
-         </div>
-          <!-- Box-7 -->
-          <div class="border rounded-2xl p-6">
-            <img src="./assets/img5.png" alt="">
+          <div class="grid grid-cols-1 lg:grid-cols-3">
+            <!-- Box-4 -->
+            <div class="border rounded-2xl p-2">
+              <img src="./assets/img3.png" alt="">
+            </div>
+            <!-- double-box -->
+            <div class="flex flex-1 border rounded-2xl p-6 row-span-2">
+              <!-- Box-5 -->
+              <div>
+                <img src="./assets/img4.png" alt="">
+              </div>
+              <!-- Box-6 -->
+              <div class="pl-4">
+                <h2 class="text-2xl font-bold text-[#494949]">Commercial</h2>
+                <p class="text-[#737373] text-base">The barn house captivates with its blend of rustic charm and
+                  modern. .</p>
+                <button class="text-[#212121] text-xl font-bold">View Details
+                  <i class="fa-solid fa-arrow-right -rotate-45 bg-arrow-primary rounded-full px-1 py-1"></i>
+                </button>
+              </div>
+            </div>
+            <!-- Box-7 -->
+            <div class="border rounded-2xl p-2">
+              <img src="./assets/img5.png" alt="">
+            </div>
           </div>
         </div>
-      </div>
-          
+
       </div>
     </section>
 
     <!-- Let’s Discuss Next Project -->
-    <section class="bg-image bg-cover bg-no-repeat">
-      <div class="lg:mx-60 lg:py-24">
+    <section class="bg-image bg-cover bg-no-repeat ">
+      <div class="py-8 lg:mx-60 lg:py-24">
         <!-- title -->
         <div class="text-center pb-8 space-y-5">
           <button class="text-lg text-[#494949] bg-[#ABEF5F33] rounded-3xl font-bold  py-1 px-3"> <i
-              class="fa-solid fa-arrow-right "></i>How we works</button>
-          <h1 class="text-[#212121] text-2xl font-bold lg:text-4xl ">Let’s Discuss Next Project</h1>
-          <p class="text-paragraph text:sm lg:text-base">The barn house captivates with its blend of rustic charm and
+              class="fa-solid fa-arrow-right "></i>Let’s Connect</button>
+          <h1 class="text-[#212121] px-4 text-2xl font-bold lg:text-4xl ">Let’s Discuss Next Project</h1>
+          <p class="text-paragraph text:sm lg:text-base px-5">The barn house captivates with its blend of rustic charm and
             modern sophistication,<br> featuring weathered wood, sleek metal accents.</p>
         </div>
 
         <!-- Form -->
 
-      <div class="grid grid-cols-1 lg:grid-cols-2 gap-5">
-        <div class="input py-2.5 items-center  rounded-full bg-[#FFFFFF] text-[#A0A0A0] text-base">
-          <input type="text"  placeholder="First Name*" />
+        <div class="grid grid-cols-1 lg:grid-cols-2 px-5 gap-5">
+          <div class="input py-2.5 items-center  rounded-full bg-[#FFFFFF] text-[#A0A0A0] text-base">
+            <input type="text" placeholder="First Name*" />
+          </div>
+
+          <div class="input py-2.5 items-center rounded-full bg-[#FFFFFF] text-[#A0A0A0] text-base">
+            <input type="text" placeholder="Last Name*" />
+          </div>
+
+          <div class="input py-2.5 items-center rounded-full bg-[#FFFFFF] text-[#A0A0A0] text-base">
+            <input type="text" placeholder="Phone Number*" />
+          </div>
+
+          <div class="input py-2.5 items-center rounded-full bg-[#FFFFFF] text-[#A0A0A0] text-base">
+            <input type="email  " placeholder="Email Number*" />
+          </div>
+
+          <div class="input py-2.5 items-center h-60 lg:col-span-2 rounded-2xl bg-[#FFFFFF] text-[#A0A0A0] text-base">
+            <input type="text  " placeholder="Write your message here" />
+          </div>
         </div>
 
-        <div class="input py-2.5 items-center rounded-full bg-[#FFFFFF] text-[#A0A0A0] text-base">
-          <input type="text"  placeholder="Last Name*" />
-        </div>
-
-        <div class="input py-2.5 items-center rounded-full bg-[#FFFFFF] text-[#A0A0A0] text-base">
-          <input type="text"  placeholder="Phone Number*" />
-        </div>
-
-        <div class="input py-2.5 items-center rounded-full bg-[#FFFFFF] text-[#A0A0A0] text-base">
-          <input type="email  "  placeholder="Email Number*" />
-        </div>
-
-        <div class="input py-2.5 items-center h-60 lg:col-span-2 rounded-2xl bg-[#FFFFFF] text-[#A0A0A0] text-base">
-          <input type="text  "  placeholder="Write your message here" />
-        </div>
-      </div>
-
-      <!-- Button -->
-      <button class="bg-[#ABEF5F] font-bold text-xl w-full rounded-full mt-8 py-3">Send Mail 
-        <i class="fa-solid fa-arrow-right text-white -rotate-45 bg-black rounded-full px-1 py-1"></i>
-      </button>
+        <!-- Button -->
+        <button class="bg-[#ABEF5F] font-bold text-xl w-full rounded-full mt-8 py-3">Send Mail
+          <i class="fa-solid fa-arrow-right text-white -rotate-45 bg-black rounded-full px-1 py-1"></i>
+        </button>
       </div>
     </section>
 
   </main>
 
   <!-- Footer Section -->
-  <footer></footer>
+  <footer class="bg-[#1C1C1C] my-8">
+    <div class="text-center py-24">
+          <!-- Title -->
+    <div class="space-y-4">
+      <h1 class="text-[#E9E9E9] text-3xl font-bold "><i class="fa-solid fa-arrow-right -rotate-45 text-black bg-[#ABEF5F] rounded-full px-1 py-1"></i> Rinterio</h1>
+      <p class="text-base text-[#737373] px-3">The barn house captivates with its blend of rustic charm and modern sophistication,<br> featuring weathered wood,
+        sleek metal accents.</p>
+    </div>
+
+    <!-- Menu Bar -->
+    <div class="grid grid-cols-1 space-y-10 lg:grid-cols-5 justify-evenly items-center text-center py-10 px-20">
+
+      <div class="text-base text-[#E9E9E9] ">Home</div>
+      <div class="text-base text-[#E9E9E9]">Service</div>
+      <div class="text-base text-[#E9E9E9]">Portfolio</div>
+      <div class="text-base text-[#E9E9E9]">Blogs</div>
+      <div class="text-base text-[#E9E9E9]">Contace Us</div>
+    </div>
+
+    <!-- Button -->
+    <Button class="bg-[#ABEF5F] text-[#1C1C1C] text-xl font-bold w-2/3 lg:w-1/5 px-6 py-2 rounded-full">Book Consult 
+      <i class="fa-solid fa-arrow-right text-white -rotate-45 bg-black rounded-full px-1 py-1"></i>
+    </Button>
+
+    </div>
+  </footer>
 
 </body>
 
