--- a/index.html
+++ b/index.html
@@ -44,15 +44,16 @@
   </script>
 </head>
 
-<body class="font-Manrope">
+<body class="font-Manrope w-full scrollbar-none">
   <!-- Header section -->
   <header class="md:container mx-auto ">
     <!-- nav bar -->
     <nav>
       <div class="navbar bg-base-100 flex justify-around">
         <div class="navbar-start ">
-          <a class="font-bold text-3xl inline-flex"> 
-            <i class="fa-solid fa-arrow-right -rotate-45 bg-[#ABEF5F] rounded-full px-1 py-1 pr-2 mr-2"></i> Rinterio</a>
+          <a class="font-bold text-3xl inline-flex">
+            <i class="fa-solid fa-arrow-right -rotate-45 bg-[#ABEF5F] rounded-full px-1 py-1 pr-2 mr-2"></i>
+            Rinterio</a>
         </div>
         <div class="navbar-center hidden lg:flex">
           <ul class="menu menu-horizontal px-1">
@@ -69,7 +70,7 @@
           <button><a class="btn text-xl font-bold bg-arrow-primary rounded-3xl">Book Consult <i
                 class="fa-solid fa-arrow-right text-white -rotate-45 bg-black rounded-full px-1 py-1"></i> </a></button>
         </div>
-        <div  class="md:hidden">
+        <div class="md:hidden">
           <i class="fa-solid fa-bars"></i>
         </div>
       </div>
@@ -158,7 +159,7 @@
           <p class="text-paragraph text:sm lg:text-base">The barn house captivates with its blend of rustic charm and
             modern sophistication,<br> featuring weathered wood, sleek metal accents.</p>
         </div>
-        <div class="grid grid-cols-1 lg:grid-cols-4 gap-5 ">
+        <div class="grid px-7 lg:px-0 grid-cols-1 lg:grid-cols-4 gap-5 ">
           <!-- card-1 -->
           <div class="card bg-[#E7C1D3] w-72 shadow-xl ">
             <div class="pt-5">
@@ -234,23 +235,23 @@
         <!-- content  -->
         <div class="md:container mx-auto gap-5 p-7 space-y-2">
           <!-- Flex-div-1 -->
-          <div class="grid grid-cols-1 lg:grid-cols-3 p-2">
-
-           <div class="border rounded-2xl h-96 lg:flex lg:h-56  lg-w-96 lg:col-span-2 mr-5">
-             <!-- Box-1 -->
-             <div class=" relative w-64 h-48 lg:w-full lg:h-56 p-2">
-              <img class="w-64 h-full" src="./assets/img1.png" alt="">
+          <div class="grid grid-cols-1 lg:grid-cols-3 pb-10 text-center">
+            
+            <div class="border rounded-2xl h-96 lg:flex lg:h-56 lg-w-96 lg:col-span-2 mr-5">
+              <!-- Box-1 -->
+              <div class=" relative w-72 h-48 lg:w-full lg:h-56 pl-6 lg:pl-2 p-2">
+                <img class="w-64 h-full" src="./assets/img1.png" alt="">
+              </div>
+              <!-- Box-2 -->  
+              <div class=" absolute text w-72 h-48 lg:w-full lg:h-56 lg:py-6 pl-4 space-y-3 lg:ml-72">
+                <h2 class="text-xl font-bold text-[#494949]">Commercial</h2>
+                <p class="text-[#737373] text-base lg:w-96">The barn house captivates with its blend of rustic charm and
+                  modern. The barn house captivates with its blend of rustic charm and modern. </p>
+                <button class="text-[#212121] text-xl font-bold">View Details
+                  <i class="fa-solid fa-arrow-right -rotate-45 bg-arrow-primary rounded-full px-1 py-1"></i>
+                </button>
+              </div>
             </div>
-            <!-- Box-2 -->
-            <div class=" absolute text w-72 h-48 lg:w-full lg:h-56 py-6 pl-4 space-y-3 ml-72">
-              <h2 class="text-xl font-bold text-[#494949]">Commercial</h2>
-              <p class="text-[#737373] text-base">The barn house captivates with its blend of rustic charm <br> and
-                modern. The barn house captivates with its blend of <br> rustic charm and modern. </p>
-              <button class="text-[#212121] text-xl font-bold">View Details
-                <i class="fa-solid fa-arrow-right -rotate-45 bg-arrow-primary rounded-full px-1 py-1"></i>
-              </button>
-            </div>
-           </div>
             <!-- Box-3 -->
             <div class="border rounded-2xl w-72 h-48 lg:w-96 lg:h-56 p-2">
               <img class="w-full h-full" src="./assets/img2.png" alt="">
@@ -290,6 +291,102 @@
       </div>
     </section>
 
+    <!-- REview section (challenge part) -->
+
+    <section>
+      <div class="md:container mx-auto py-10 p-12">
+
+        <div class="text-center py-8 space-y-4">
+          <h1 class="text-[#212121] px-4 text-2xl font-bold lg:text-4xl ">Client Testimonials and Customer Reviews</h1>
+          <p class="text-paragraph text:sm lg:text-base px-5">we are very thankful for our loyal clients. Our business
+            is one of close relationships and we are very
+            fortunate <br> to be able to share so many positive real estate experiences with our clients. Your
+            satisfaction is
+            the ultimate <br> reward for our work and it is why we strive to be Your Louisville Real Estate Experts!</p>
+        </div>
+
+        <!-- Review -->
+        <div class="grid grid-cols-1 lg:grid-cols-3 gap-5  lg:pl-24 ">
+          <!-- card-1 -->
+          <div class="card w-72 shadow-xl ">
+            <div class="pt-5">
+              <div class="ml-8 w-12 h-12 rounded-full">
+                <img src="./assets/review-5.jfif" alt="">
+              </div>
+
+               <!-- Rating -->
+               <div class="pl-6 pt-5 ">
+                <i class="fa-solid fa-star text-2xl text-amber-500"></i>
+                <i class="fa-solid fa-star text-2xl text-amber-500"></i>
+                <i class="fa-solid fa-star text-2xl text-amber-500"></i>
+                <i class="fa-solid fa-star text-2xl text-amber-500"></i>
+                <i class="fa-solid fa-star text-2xl text-amber-500"></i>
+              </div>
+
+              <div class="card-body">
+                <h2 class=" text-xl font-bold">Dave and Kathy Rice</h2>
+                <p class="text-paragraph text:sm lg:text-base">We were first time home buyers relocating from the
+                  Chicago area to Louisville. We selected the Joe Hayden Real Estate Team based on reviews we saw online
+                  and we were so lucky to have chosen them.</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- card-2 -->
+          <div class="card w-72 shadow-xl ">
+            <div class="pt-5">
+              <div class="ml-8 w-12 h-12 rounded-full">
+                <img src="./assets/Review-2 (1).png" alt="">
+              </div>
+
+              <!-- Rating -->
+              <div class="pl-6 pt-5 ">
+                <i class="fa-solid fa-star text-2xl text-amber-500"></i>
+                <i class="fa-solid fa-star text-2xl text-amber-500"></i>
+                <i class="fa-solid fa-star text-2xl text-amber-500"></i>
+                <i class="fa-solid fa-star text-2xl text-amber-500"></i>
+                <i class="fa-solid fa-star text-2xl text-amber-500"></i>
+              </div>
+
+              <!-- Content -->
+              <div class="card-body">
+                <h2 class=" text-xl font-bold">John and Natalie Harris</h2>
+                <p class="text-paragraph text:sm lg:text-base">When we first met Joe Hayden, he explained that his job
+                  is more service than sales. He proved that time and again with his thorough knowledge of home
+                  construction and the local market.</p>
+              </div>
+            </div>
+          </div>
+          <!-- card-3 -->
+          <div class="card w-72 shadow-xl ">
+            <div class="pt-5">
+              <div class="ml-8 w-12 h-12 rounded-full">
+                <img src="./assets/review-4.jfif" alt="">
+              </div>
+
+               <!-- Rating -->
+               <div class="pl-6 pt-5 ">
+                <i class="fa-solid fa-star text-2xl text-amber-500"></i>
+                <i class="fa-solid fa-star text-2xl text-amber-500"></i>
+                <i class="fa-solid fa-star text-2xl text-amber-500"></i>
+                <i class="fa-solid fa-star text-2xl text-amber-500"></i>
+                <i class="fa-solid fa-star text-2xl text-amber-500"></i>
+              </div>
+
+              <div class="card-body">
+                <h2 class=" text-xl font-bold">Adam and Corey Kline</h2>
+                <p class="text-paragraph text:sm lg:text-base">Throughout my adult years, I have had the experience of
+                  purchasing a few different houses. As my family began to grow, I recently found the need and desire to
+                  purchase a larger home..</p>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+
     <!-- Let’s Discuss Next Project -->
     <section class="bg-image bg-cover bg-no-repeat ">
       <div class="py-8 lg:mx-60 lg:py-24">
@@ -298,7 +395,8 @@
           <button class="text-lg text-[#494949] bg-[#ABEF5F33] rounded-3xl font-bold  py-1 px-3"> <i
               class="fa-solid fa-arrow-right "></i>Let’s Connect</button>
           <h1 class="text-[#212121] px-4 text-2xl font-bold lg:text-4xl ">Let’s Discuss Next Project</h1>
-          <p class="text-paragraph text:sm lg:text-base px-5">The barn house captivates with its blend of rustic charm and
+          <p class="text-paragraph text:sm lg:text-base px-5">The barn house captivates with its blend of rustic charm
+            and
             modern sophistication,<br> featuring weathered wood, sleek metal accents.</p>
         </div>
 
@@ -338,27 +436,29 @@
   <!-- Footer Section -->
   <footer class="bg-[#1C1C1C] my-8">
     <div class="text-center py-24">
-          <!-- Title -->
-    <div class="space-y-4">
-      <h1 class="text-[#E9E9E9] text-3xl font-bold "><i class="fa-solid fa-arrow-right -rotate-45 text-black bg-[#ABEF5F] rounded-full px-1 py-1"></i> Rinterio</h1>
-      <p class="text-base text-[#737373] px-3">The barn house captivates with its blend of rustic charm and modern sophistication,<br> featuring weathered wood,
-        sleek metal accents.</p>
-    </div>
+      <!-- Title -->
+      <div class="space-y-4">
+        <h1 class="text-[#E9E9E9] text-3xl font-bold "><i
+            class="fa-solid fa-arrow-right -rotate-45 text-black bg-[#ABEF5F] rounded-full px-1 py-1"></i> Rinterio</h1>
+        <p class="text-base text-[#737373] px-3">The barn house captivates with its blend of rustic charm and modern
+          sophistication,<br> featuring weathered wood,
+          sleek metal accents.</p>
+      </div>
 
-    <!-- Menu Bar -->
-    <div class="grid grid-cols-1 space-y-10 lg:grid-cols-5 justify-evenly items-center text-center py-10 px-20">
+      <!-- Menu Bar -->
+      <div class="grid grid-cols-1 space-y-10 lg:grid-cols-5 justify-evenly items-center text-center py-10 px-20">
 
-      <div class="text-base text-[#E9E9E9] ">Home</div>
-      <div class="text-base text-[#E9E9E9]">Service</div>
-      <div class="text-base text-[#E9E9E9]">Portfolio</div>
-      <div class="text-base text-[#E9E9E9]">Blogs</div>
-      <div class="text-base text-[#E9E9E9]">Contace Us</div>
-    </div>
+        <div class="text-base text-[#E9E9E9] ">Home</div>
+        <div class="text-base text-[#E9E9E9]">Service</div>
+        <div class="text-base text-[#E9E9E9]">Portfolio</div>
+        <div class="text-base text-[#E9E9E9]">Blogs</div>
+        <div class="text-base text-[#E9E9E9]">Contace Us</div>
+      </div>
 
-    <!-- Button -->
-    <Button class="bg-[#ABEF5F] text-[#1C1C1C] text-xl font-bold w-2/3 lg:w-1/5 px-6 py-2 rounded-full">Book Consult 
-      <i class="fa-solid fa-arrow-right text-white -rotate-45 bg-black rounded-full px-1 py-1"></i>
-    </Button>
+      <!-- Button -->
+      <Button class="bg-[#ABEF5F] text-[#1C1C1C] text-xl font-bold w-2/3 lg:w-1/5 px-6 py-2 rounded-full">Book Consult
+        <i class="fa-solid fa-arrow-right text-white -rotate-45 bg-black rounded-full px-1 py-1"></i>
+      </Button>
 
     </div>
   </footer>
