--- a/index.html
+++ b/index.html
@@ -235,15 +235,15 @@
         <!-- content  -->
         <div class="md:container mx-auto gap-5 p-7 space-y-2">
           <!-- Flex-div-1 -->
-          <div class="grid grid-cols-1 lg:grid-cols-3 pb-10 text-center">
+          <div class="grid grid-cols-1 lg:grid-cols-3 pb-10 ">
             
             <div class="border rounded-2xl h-96 lg:flex lg:h-56 lg-w-96 lg:col-span-2 mr-5">
               <!-- Box-1 -->
-              <div class=" relative w-72 h-48 lg:w-full lg:h-56 pl-6 lg:pl-2 p-2">
+              <div class=" relative w-72 h-48 lg:w-full lg:h-56  lg:pl-2 p-2">
                 <img class="w-64 h-full" src="./assets/img1.png" alt="">
               </div>
               <!-- Box-2 -->  
-              <div class=" absolute text w-72 h-48 lg:w-full lg:h-56 lg:py-6 pl-4 space-y-3 lg:ml-72">
+              <div class=" absolute text w-72 h-48  lg:h-56 lg:py-6 pl-4 space-y-3 lg:ml-72">
                 <h2 class="text-xl font-bold text-[#494949]">Commercial</h2>
                 <p class="text-[#737373] text-base lg:w-96">The barn house captivates with its blend of rustic charm and
                   modern. The barn house captivates with its blend of rustic charm and modern. </p>
@@ -292,7 +292,6 @@
     </section>
 
     <!-- REview section (challenge part) -->
-
     <section>
       <div class="md:container mx-auto py-10 p-12">
 
@@ -385,7 +384,6 @@
         </div>
       </div>
     </section>
-
 
     <!-- Let’s Discuss Next Project -->
     <section class="bg-image bg-cover bg-no-repeat ">
